--- a/templates/login.html
+++ b/templates/login.html
@@ -22,15 +22,15 @@
             <form action="/login" method="post" id="loginForm">
                 <div class="form-group">
                     <label for="email">Email Address</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" placeholder="Enter Your Email" id="email" name="email" required>
                 </div>
 
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" placeholder="Enter Your Password" id="password" name="password" required>
                 </div>
 
-                <button type="submit" class="btn btn-primary">Sign In</button>
+                <button type="submit" id= "signin" class="btn btn-primary">Sign In</button>
                 
                 <a href="/register" class="auth-link">Don't have an account? Create one</a>
             </form>
@@ -48,6 +48,10 @@
             background: #fef3c7;
             color: #92400e;
             border: 1px solid #fcd34d;
+        }
+
+        #signin{
+            width: 100%;
         }
     </style>
 </body>
